--- a/.ci/cirrus-freebsd.yml.j2
+++ b/.ci/cirrus-freebsd.yml.j2
@@ -1,7 +1,7 @@
 task:
   name: 'ci/cirrusci: test-freebsd'
   freebsd_instance:
-    image_family: freebsd-12-2
+    image_family: freebsd-13-1
   env:
     SED: gsed
     PIP_CACHE_DIR: $CIRRUS_WORKING_DIR/cache/pip
@@ -18,7 +18,9 @@ task:
         bash
         gsed
         git
-    - ln -s /usr/local/bin/gsha256sum /bin/sha256sum
+    - ln -sf /usr/local/bin/gsha256sum /sbin/sha256sum
+    - which sha256sum
+    - sha256sum --version
     - pw useradd -n testuser -m -w random
   clone_script:
     - git clone "$CLONE_URL" .
